--- a/src/index.scss
+++ b/src/index.scss
@@ -156,7 +156,7 @@ html {
     & .logo_i {
       position: absolute;
       max-width: 30vw;
-      left: -23vw;
+      left: -22vw;
       top: -2vw;
     }
   }
@@ -204,7 +204,7 @@ html {
         line-height: .9;
         left: 2.5vw;
         margin: 0;
-        font-size: 2.4vw;
+        font-size: 2.2rem;
         font-weight: bold;
         text-transform: uppercase;
         font-family: segunda;
