--- a/src/index.scss
+++ b/src/index.scss
@@ -88,8 +88,8 @@ html {
   & .estrella {
     position: absolute;
     z-index: 3;
-    max-width: 350px;
-    right: 0;
+    max-width: 30vw;
+    right: -50px;
     bottom: -100px;
     pointer-events: none;
   }
@@ -136,14 +136,14 @@ html {
       text-transform: uppercase;
       letter-spacing: 2px;
       font-weight: bold;
-      bottom: -3vh;
-      left: -10vw;
+      bottom: 0vh;
+      left: -6vw;
       font-family: primera2;
       color: var(--amarillo);
     }
 
     & .foto {
-      max-width: 50vw;
+      width: 50vw;
     }
 
     & .logo_f {
@@ -202,7 +202,8 @@ html {
         position: absolute;
         bottom: 3vw;
         line-height: .9;
-        left: 2.5vw;
+        left: 50%;
+        transform: translateX(-50%);
         margin: 0;
         font-size: 2.2rem;
         font-weight: bold;
@@ -594,10 +595,7 @@ html {
   background-repeat: no-repeat;
   overflow: hidden;
 
-  padding-bottom: 4vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding: 2rem;
 
   & .estrella {
     position: absolute;
@@ -616,7 +614,7 @@ html {
   }
 
   & .contenedor {
-    max-width: 60vw;
+    max-width: 80vw;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
