--- a/src/index.scss
+++ b/src/index.scss
@@ -403,7 +403,7 @@ html {
 }
 
 #tu {
-  background-image: url(img/fondo_4.webp);
+  background-image: url(img/fondo_4.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0px center;
