--- a/src/index.scss
+++ b/src/index.scss
@@ -406,9 +406,9 @@ html {
   background-image: url(img/fondo_4.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 0px center;
-  margin-top: -18vw;
-  padding-top: 15vw;
+  background-position: center center;
+  padding-bottom: 4rem;
+
 
   overflow-x: hidden;
 
