--- a/src/index.scss
+++ b/src/index.scss
@@ -941,7 +941,7 @@ html {
 }
 
 .contenedor_estrella {
-  background-image: url(./img/fondo_1.png);
+  background-image: url(./img/Fondo2menu.png);
   position: fixed;
   top: 0;
   left: 0;
